--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express-async-errors": "^3.1.1",
     "http-status": "^1.6.2",
     "joi": "^17.9.1",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "uuid": "^9.0.0"
   }
 }
